--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,8 +3,9 @@ packages:
 
 catalog:
   eslint: ^9.19.0
+  "@eslint/eslintrc": ^3
   prettier: ^3.4.2
-  tailwindcss: ^3.4.15
+  tailwindcss: ^4
   typescript: ^5.7.3
 
 catalogs:
