--- a/turbo.json
+++ b/turbo.json
@@ -11,6 +11,28 @@
     },
     "//#clean": {
       "cache": false
+    },
+    "format": {
+      "outputs": [
+        ".cache/.prettiercache"
+      ],
+      "outputLogs": "new-only"
+    },
+    "lint": {
+      "dependsOn": [
+        "^topo"
+      ],
+      "outputs": [
+        ".cache/.eslintcache"
+      ]
+    },
+    "typecheck": {
+      "dependsOn": [
+        "^topo"
+      ],
+      "outputs": [
+        ".cache/tsbuildinfo.json"
+      ]
     }
   }
 }
