--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,6 @@
 packages:
+  - apps/*
+  - packages/*
   - tooling/*
 
 catalog:
@@ -6,6 +8,7 @@ catalog:
   "@eslint/eslintrc": ^3
   prettier: ^3.4.2
   tailwindcss: ^4
+  "@tailwindcss/postcss": ^4
   typescript: ^5.7.3
 
 catalogs:
