--- a/tooling/prettier/package.json
+++ b/tooling/prettier/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "type": "module",
   "exports": {
-    ".": "./index.js"
+    ".": "./index.ts"
   },
   "scripts": {
     "clean": "git clean -xdf .cache .turbo node_modules",
